--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="max-length">
       <h1>Send us a sweet little note</h1>
 
-      <form class="push-0">
+      <form class="push-0 method="POST" action="https://formspree.io/pion0009@algonquinlive.com">
         <div class="push">
           <label for="name">Name</label>
           <input id="name" required>
@@ -24,7 +24,7 @@
         </div>
         <div class="push">
           <label for="subject">Subject</label>
-          <select id="subject">
+          <select id="subject" name="_subject">
             <option>Get a quote!</option>
             <option>General question</option>
             <option>Just to talk</option>
@@ -35,7 +35,7 @@
           <textarea id="details" required></textarea>
         </div>
         <div>
-          <button class="btn btn-light megatype="submit">Send message</button>
+          <button class="btn btn-light mega" type="submit">Send message</button>
         </div>
       </form>
     </div>
