--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="max-length">
       <h1>Send us a sweet little note</h1>
 
-      <form class="push-0 method="POST" action="https://formspree.io/pion0009@algonquinlive.com">
+      <form class="push-0" method="POST" action="https://formspree.io/pion0009@algonquinlive.com">
         <div class="push">
           <label for="name">Name</label>
           <input id="name" required>
@@ -40,8 +40,5 @@
       </form>
     </div>
   </section>
-
-
-
 </body>
 </html>
